# Docx_to_PDF_converter

./: PDF_conversion.py  README.md  main.py  pyproject.toml
backend_express/: package.json
backend_express/src/: index.js
backend_fastapi/: main.py
frontend/: config.js  index.html  main.js  styles.css
scripts/: cli_convert.py
