[project]
name = "gen-ai-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "docx2pdf>=0.1.8",
    "webdriver-manager>=4.0.2",
    "selenium>=4.35.0",
]
